# oa_ontology

./: .gitignore  CLAUDE_GUIDE.md  CROSSREF_README.md  ENHANCED_DOMAIN_README.md  FUTURE_DIRECTIONS.md  README.md  UML_PARSER_README.md  build_ontology.py  crossref_api_uml.py  domain_ontology_summary.md  export_to_neo4j.py  extract_domain_ontology.py  install_and_run.sh  ontology_README.md  parse_all_imagemaps.py  parse_html.py  process_busterm.py  pyproject.toml  requirements.txt  run_crossref.py  setup.py  test_improved_parser.py  test_structure_parser.py  visualize_connected_classes.py  visualize_enhanced_domain.py  visualize_ontology.py
oa_ontology/: __init__.py  build_ontology.py  cli.py  cli_dependencies.py  combine_schema_structures.py  config.py  create_visualization_graph.py  crossref_api_uml.py  enhanced_domain_ontology.py  export_to_neo4j.py  extract_domain_ontology.py  extract_methods.py  html_doc_extractor.py  html_imagemap_parser.py  improved_uml_parser.py  init.py  manual_assignment_parser.py  oa.py  parse_html.py  run_all.py  schema_to_yaml.py  structure_to_yaml.py  uml_parser.py  uml_structure_parser.py  visualization_utils.py
outputs/: connected_classes_visualization.html  connectivity_domain_visualization.html  design_ontology.graphml  design_ontology.json  domain_ontology.graphml  domain_ontology.json  domain_ontology_report.md  enhanced_domain_ontology.json  enhanced_domain_ontology_fixed.json  enhanced_domain_ontology_report.md  enhanced_domain_visualization.html  example_queries.cypher  hierarchy_domain_visualization.html  neo4j_import.cypher  ontology_dashboard.html  ontology_metrics.json  physical_domain_visualization.html  visualization_graph.json
outputs/visualizations/: ontology_report.html
scripts/: README.md  __init__.py  debug_extraction.py  fix_bundle_term.py  fix_enhanced_ontology.py  parse_all_diagrams.py  process_busterm.py  run_enhanced_domain.py  validate_crossref.py  visualize_connected_classes.py  visualize_enhanced_domain.py
