[project]
name = "oa-ontology"
version = "0.1.0"
description = "OpenAccess Ontology Explorer - Extract and analyze the ontology of the Cadence OpenAccess API"
authors = [
    {name = "Robert Taylor", email = "rob.taylor@chipflow.io"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "networkx>=2.8.0,<3.2",
    "pyyaml>=6.0",
    "tqdm>=4.64.0", 
    "beautifulsoup4>=4.11.0",
    "tomli>=2.0.0",
    "pyvis>=0.3.2",
    "lxml>=5.3.1",
    "numpy>=1.23.0,<2.0",
    "pytesseract>=0.3.13",
    "opencv-python>=4.11.0.86",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
# Core ontology building tools
oa-setup = "oa_ontology.init:main"
oa-parse = "oa_ontology.parse_html:main"
oa-build = "oa_ontology.build_ontology:main"
oa-domain = "oa_ontology.extract_domain_ontology:main"
oa-export = "oa_ontology.export_to_neo4j:main"
oa-visualize = "oa_ontology.visualize_ontology:main"
oa-run-all = "oa_ontology.run_all:main"

# Schema and structure tools
oa-schema = "oa_ontology.schema_to_yaml:main"
oa-uml-to-yaml = "oa_ontology.structure_to_yaml:main"
oa-combine-schema = "oa_ontology.combine_schema_structures:main"

# UML parsing tools
oa-parse-uml = "scripts.parse_all_diagrams:main"
oa-parse-imagemap = "scripts.parse_all_imagemaps:main"
oa-imagemap = "oa_ontology.html_imagemap_parser:main"
oa-test-uml-parser = "scripts.test_improved_parser:main"
oa-test-structure-parser = "scripts.test_structure_parser:main"

# Documentation extraction
oa-doc-extract = "oa_ontology.html_doc_extractor:main"
oa-debug-extraction = "scripts.debug_extraction:main"
oa-process-busterm = "scripts.process_busterm:main"

# Cross-referencing
oa-crossref = "scripts.run_crossref:main"
oa-validate-crossref = "scripts.validate_crossref:main"

# Enhanced domain ontology
oa-enhanced-domain = "scripts.run_enhanced_domain:main"
oa-fix-enhanced = "scripts.fix_enhanced_ontology:main"
oa-fix-bundleterm = "scripts.fix_bundle_term:main"

# Visualization
oa-vis-connected = "scripts.visualize_connected_classes:main"
oa-vis-enhanced = "scripts.visualize_enhanced_domain:main"
oa-create-vis-graph = "oa_ontology.create_visualization_graph:main"

[project.urls]
Homepage = "https://github.com/username/oa-ontology"
Documentation = "https://github.com/username/oa-ontology#readme"
Repository = "https://github.com/username/oa-ontology.git"
Issues = "https://github.com/username/oa-ontology/issues"

# Configuration for the ontology explorer
[tool.oa-ontology]
html_repo = "https://github.com/oa22doc/oa22doc.github.io"
modules = ["design", "base", "tech", "cms", "wafer", "block"]

[tool.oa-ontology.default_directories]
html_dir = "html_source"
yaml_dir = "yaml_output"
ontology_dir = "ontology_output"

[tool.pdm]
distribution = true


[dependency-groups]
dev = [
    "black>=23.3.0",
    "pylint>=2.17.0",
    "pytest>=7.3.1",
]
