[project]
name = "oa-ontology"
version = "0.1.0"
description = "OpenAccess Ontology Explorer - Extract and analyze the ontology of the Cadence OpenAccess API"
authors = [
    {name = "Robert Taylor", email = "rob.taylor@chipflow.io"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "networkx>=2.8.0,<3.2",
    "pyyaml>=6.0",
    "tqdm>=4.64.0", 
    "beautifulsoup4>=4.11.0",
    "tomli>=2.0.0",
    "pyvis>=0.3.2",
    "lxml>=5.3.1",
    "numpy>=1.23.0,<2.0",
    "pytesseract>=0.3.13",
    "opencv-python>=4.11.0.86",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
oa = "oa_ontology.oa:main"

[tool.pdm.scripts]
# Unified CLI
oa = {call = "oa_ontology.cli:main", help = "Unified OpenAccess Ontology Explorer CLI tool"}

# Core workflow scripts (kept for backward compatibility)
setup = {call = "oa_ontology.init:main", help = "Download and setup the OpenAccess documentation"}
run-all = {call = "oa_ontology.run_all:main", help = "Run all ontology extraction and processing steps"}

# Test scripts that aren't easily integrated into the CLI
test-uml-parser = {call = "scripts.test_improved_parser:main", help = "Test the improved UML parser"}
test-structure-parser = {call = "scripts.test_structure_parser:main", help = "Test the UML structure parser"}
debug-extraction = {call = "scripts.debug_extraction:main", help = "Debug HTML parsing issues"}

# Shorthand for common visualization commands
vis-connected = {call = "scripts.visualize_connected_classes:main", help = "Create visualization of most connected classes without inheritance"}
vis-enhanced = {call = "scripts.visualize_enhanced_domain:main", help = "Create domain-specific visualizations"}

[project.urls]
Homepage = "https://github.com/username/oa-ontology"
Documentation = "https://github.com/username/oa-ontology#readme"
Repository = "https://github.com/username/oa-ontology.git"
Issues = "https://github.com/username/oa-ontology/issues"

# Configuration for the ontology explorer
[tool.oa-ontology]
html_repo = "https://github.com/oa22doc/oa22doc.github.io"
modules = ["design", "base", "tech", "cms", "wafer", "block"]

[tool.oa-ontology.default_directories]
html_dir = "html_source"
yaml_dir = "yaml_output"
ontology_dir = "ontology_output"

[tool.pdm]
distribution = true


[dependency-groups]
dev = [
    "black>=23.3.0",
    "pylint>=2.17.0",
    "pytest>=7.3.1",
]
